--- a/public/css/icomoon (1)/style.css
+++ b/public/css/icomoon (1)/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?28utua');
-  src:  url('fonts/icomoon.eot?28utua#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?28utua') format('truetype'),
-    url('fonts/icomoon.woff?28utua') format('woff'),
-    url('fonts/icomoon.svg?28utua#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?2ifyfk');
+  src:  url('fonts/icomoon.eot?2ifyfk#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?2ifyfk') format('truetype'),
+    url('fonts/icomoon.woff?2ifyfk') format('woff'),
+    url('fonts/icomoon.svg?2ifyfk#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-dots-three-vertical:before {
+  content: "\e901";
+}
 .icon-health:before {
   content: "\e900";
 }
